Fixed modal on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -335,10 +335,9 @@ section.banner{
   transition: 400ms;
 }
 
-.projects .content:hover{
+.projects .content:hover, .projects .content:active{
   opacity: 100;
 }
-
 
 
 .projects-grid {
@@ -401,35 +400,44 @@ section.banner{
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
-  padding: 10%;
+  padding-left: 16px;
+  padding-right: 16px;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   right: 0;
   bottom: 0;
   backdrop-filter: blur(2px);
-  width: 50%; /* Full width */
-  height: 50; /* Full height */
+  width: 300px; /* Full width */
+  height: 300px; /* Full height */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0, 0, 0, 0.69); /* Black w/ opacity */
   border-radius: 16px;
   color: var(--light);
   transition: all 1000ms;
 
+
 }
 
 /* Modal Content/Box */
 .modal-content {
-  margin: 15% auto; /* 15% from the top and centered */
-  padding: 20px;
+  /* margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px; 
   border: 1px solid #888;
   width: 80%; 
+}
 
+.modal h1{
+  font-size: 2rem;
+  text-align: center;
+  margin: 0 auto;
 }
 
 /* The Close Button */
 .close {
   color: var(--light);
   position: fixed;
-  bottom: 85%;
+  bottom: 220px;
   right: 20px;
   font-size: 70px;
   font-weight: 700;
